# usma

./: .gitignore  ColOrd.bmpr  Makefile  Procfile  README.md  Usma.bmpr  build  build-watch  col-ord.cabal  package-lock.json  package.json  script.sql  stack.yaml  tailwind.js  tailwind.webpack.config.js  test  test-watch  todo.txt  tsconfig.json  upgrade-db  usma.cabal  webpack.config.js
client/src/: AddProduct.tsx  Button.tsx  CurrentHouseholdOrder.tsx  CurrentOrder.tsx  Field.tsx  FullOrderPage.tsx  HouseholdOrderPage.tsx  HouseholdOrders.tsx  HouseholdOrdersPage.tsx  HouseholdPage.tsx  HouseholdPayments.tsx  HouseholdPaymentsPage.tsx  HouseholdsPage.tsx  Icon.tsx  Link.tsx  LoadMore.tsx  Main.tsx  Money.tsx  OrderDetails.tsx  OrderHouseholdPage.tsx  OrderList.tsx  OrderPage.tsx  OrdersPage.tsx  PastHouseholdOrderPage.tsx  PastHouseholdOrders.tsx  PastOrderPage.tsx  ProductsPage.tsx  Router.ts  RouterLink.tsx  ServerApi.ts  TopNav.tsx  Types.ts  Util.ts  Validation.ts  Validator.ts  index.js  index.tsx
client/src/admin/: AdminHomePage.tsx  AdminTopNav.tsx  HomePage.tsx  TopNav.tsx
client/src/common/: Collapsible.tsx  Field.tsx  FilteredProducts.ts  Icon.tsx  LoadMore.tsx  Loading.tsx  Money.tsx  Router.ts  RouterLink.tsx  Util.ts  Validation.ts
client/src/components/: AddProduct.tsx  AdminTopNav.tsx  CurrentHouseholdOrder.tsx  CurrentOrder.tsx  CurrentOrderForHousehold.tsx  CurrentOrderItems.tsx  CurrentOrderProductCodes.tsx  HouseholdOrdersForOrder.tsx  HouseholdPayments.tsx  PastHouseholdOrders.tsx  PastHouseholdOrdersForOrder.tsx  PastOrders.tsx  ProductFilters.tsx  ProductList.tsx
client/src/household/: AcceptUpdates.tsx  AddProduct.tsx  CollapsibleWithHeader.tsx  CollectiveOrder.tsx  CollectiveOrderDetails.tsx  CollectiveOrderMessages.tsx  CurrentCollectiveOrder.tsx  CurrentCollectiveOrderMessages.tsx  CurrentHouseholdOrder.tsx  CurrentHouseholdOrderButtons.tsx  CurrentHouseholdOrderItem.tsx  CurrentHouseholdOrderStatus.tsx  CurrentHouseholdOrderTotal.tsx  CurrentOrder.tsx  CurrentOrderCollapsed.tsx  CurrentOrderForHousehold.tsx  EditHousehold.tsx  Header.tsx  HouseholdOrder.tsx  HouseholdOrderButtons.tsx  HouseholdOrderItems.tsx  HouseholdOrderStatus.tsx  HouseholdOrderTotal.tsx  HouseholdPage.tsx  HouseholdPaymentForm.tsx  HouseholdPayments.tsx  HouseholdPaymentsCollapsed.tsx  HouseholdWelcomePage.tsx  HouseholdsPage.tsx  Loading.tsx  OrderItem.tsx  PastHouseholdOrderItem.tsx  PastHouseholdOrders.tsx  PastHouseholdOrdersCollapsed.tsx  TopNav.tsx  WelcomePage.tsx
client/src/order/: OrderFooter.tsx  OrderItem.tsx  OrderItems.tsx  OrderMessages.tsx  OrderStatus.tsx  OrderTabs.tsx  OrderTotal.tsx
client/src/pages/: AdminHouseholdPage.tsx  AdminHouseholdsPage.tsx  AdminOrdersPage.tsx  AdminPlaceOrderPage.tsx  AdminProductsPage.tsx  FullOrderPage.tsx  HomePage.tsx  HouseholdPage.tsx  HouseholdWelcomePage.tsx  HouseholdsPage.tsx  OrdersPage.tsx  PastHouseholdOrderPage.tsx  PastOrderPage.tsx  PlaceOrderPage.tsx  ProductsPage.tsx  WelcomePage.tsx
client/src/product/: FilteredProducts.ts  ProductFilters.tsx  ProductFlags.tsx  ProductList.tsx
client/src/util/: Collapsible.tsx  Field.tsx  Icon.tsx  Image.tsx  Loading.tsx  Money.tsx  Router.ts  ServerApi.ts  Types.ts  Util.ts  Validation.ts
client/static/: index.html
client/static/css/: ServerApi.ts  main.css
server/app/: Api.hs  AppApi.hs  AppServer.hs  CatalogueImport.hs  Config.hs  Database.hs  DatabaseTypes.hs  Main.hs  ProductCatalogueImport.hs  ProductImage.hs  ProductRepository.hs  ReconcileHouseholdOrderFile.hs
server/app/v2/: ApiV2.hs  AppApiV2.hs  AppServerV2.hs  CompareV2Api.hs  CsvExport.hs  DatabaseV2.hs  DomainV2.hs  ReconcileSumaOrderFile.hs  RepositoryV2.hs  ServerV2.hs  SumaCatalogue.hs
server/database/: Main.hs  UpgradeDB.hs  database_setup.sql  grant.sql  upgrade_setup.sql
server/database/upgrade/: upgrade_000.sql  upgrade_001.sql  upgrade_002.sql  upgrade_003.sql  upgrade_004.sql  upgrade_005.sql  upgrade_006.sql  upgrade_007.sql  upgrade_008.sql  upgrade_009.sql  upgrade_010.sql  upgrade_011.sql  upgrade_012.sql  upgrade_013.sql  upgrade_014.sql  upgrade_015.sql  upgrade_016.sql  upgrade_setup.sql  upgrade_template.sql
server/src/: Api.hs  App.hs  AppApi.hs  AppServer.hs  CatalogueEntry.hs  CollectiveOrder.hs  CompareV2Api.hs  Config.hs  Database.hs  DatabaseTypes.hs  GroupSettings.hs  Household.hs  HouseholdOrder.hs  HouseholdOrderItem.hs  HouseholdPayment.hs  OrderItem.hs  PastCollectiveOrder.hs  PastHouseholdOrder.hs  PastOrderItem.hs  Product.hs  ProductCatalogueData.hs  ProductCatalogueEntry.hs  ProductCatalogueImport.hs  ProductImage.hs  ReconcileHouseholdOrderFile.hs  Types.hs  UpgradeDB.hs  UploadedOrderFile.hs  V1.hs  V1_.hs  V2.hs  V2_.hs
server/src/System/: Command.hs
server/src/V1/: Api.hs  DatabaseTypes.hs  ReconcileHouseholdOrderFile.hs  Server.hs  Types.hs
server/src/V1_/: Api.hs  Database.hs  DatabaseTypes.hs  ProductCatalogueImport.hs  ProductImage.hs  ReconcileHouseholdOrderFile.hs  Server.hs  Types.hs
server/src/V2/: Api.hs  CsvExport.hs  Domain.hs  ReconcileSumaOrderFile.hs  Repository.hs  Server.hs  SumaCatalogue.hs
server/src/V2_/: Api.hs  CsvExport.hs  Domain.hs  ReconcileSumaOrderFile.hs  Repository.hs  Server.hs  SumaCatalogue.hs
server/src/v1/: AppApi.hs  AppServer.hs  Database.hs  DatabaseTypes.hs  ProductCatalogueImport.hs  ProductImage.hs
server/src/v2/: AppApiV2.hs  AppServerV2.hs  CompareV2Api.hs  CsvExport.hs  DomainV2.hs  ReconcileSumaOrderFile.hs  RepositoryV2.hs  SumaCatalogue.hs
server/test/: ApiRegressionSpec.hs  DomainSpec.hs  GenerateTestsSpec.hs  Spec.hs  Test Household 1.html  Test Household 2.html  Test Household 3.html  TestHelpers.hs  TestSumaPrices.csv  TestSumaPricesUpdated.csv  create-groups.sql  delete-db.sql
server/test/requests/: 1-req.txt  10-req.txt  11-req.txt  12-req.txt  13-req.txt  14-req.txt  15-req.txt  15-resp.txt  16-req.txt  16-resp.txt  17-resp.txt  18-req.txt  18-resp.txt  19-resp.txt  2-resp.txt  20-req.txt  20-resp.txt  21-req.txt  21-resp.txt  22-req.txt  23-req.txt  23-resp.txt  24-req.txt  25-resp.txt  (+46 more)
(+94 files in other folders)
