name:                usma
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stusherwin/usma#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      server/src
                     , server/src/v2
  exposed-modules:     App
                     , Config
                     , Types
                     , DomainV2
                     , DomainV2.Adjustments 
                     , DomainV2.Catalogue 
                     , DomainV2.Households 
                     , DomainV2.Orders 
                     , DomainV2.Payments 
                     , DomainV2.Prices 
                     , DomainV2.Types 
                     , DomainV2.Utils                     
                     , AppApiV2
                     , CompareV2Api
                     , AppServerV2
                     , Api
                     , AppApi
                     , AppServer
                     , Database
                     , DatabaseTypes
                     , ProductCatalogueImport
                     , ReconcileHouseholdOrderFile
                     , ProductImage
                     , RepositoryV2
                     , RepositoryV2.SQL
                     , CsvExport
                     , SumaCatalogue
                     , ReconcileSumaOrderFile
                     , UpgradeDB
  other-modules:     
  ghc-options:         -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-type-defaults
  build-depends:       base
                     , aeson                     
                     , extra
                     , hashable
                     , time
                     , text
                     , unordered-containers
                     , aeson
                     , aeson-pretty
                     , base
                     , bytestring
                     , case-insensitive
                     , cassava
                     , containers
                     , cookie
                     , directory
                     , filepath
                     , http-api-data
                     , http-conduit
                     , http-media
                     , http-types
                     , mtl
                     , postgresql-simple
                     , safe
                     , servant
                     , servant-server
                     , servant-options
                     , servant-purescript
                     , servant-multipart
                     , tagsoup
                     , time
                     , text
                     , transformers
                     , uuid
                     , vector
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-middleware-static
                     , safe
                     , ansi-terminal
                     , process
                     , lens
  default-language:    Haskell2010

executable usma
  hs-source-dirs:      server/app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-type-defaults
  build-depends:       usma
                     , base
                     , warp
                     , wai-extra
  default-language:    Haskell2010

test-suite usma-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
  main-is:             Spec.hs
  other-modules:       DomainSpec
                     , TestHelpers
                     , GenerateTestsSpec
                     , ApiRegressionSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-type-defaults
  build-depends:       usma
                     , aeson
                     , aeson-pretty
                     , base
                     , base-compat-batteries
                     , containers
                     , http-client
                     , http-types
                     , wai
                     , warp
                     , hspec
                     , hspec-wai
                     , directory
                     , bytestring
                     , process
                     , wai-extra
                     , time
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stusherwin/usma
