name:                usma
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stusherwin/usma#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      server/src
  exposed-modules:     App
                     , Api
                     , Config
                     , UpgradeDB 
                     , V2.Api
                     , V2.CsvExport
                     , V2.Domain
                     , V2.Domain.Adjustments 
                     , V2.Domain.Catalogue 
                     , V2.Domain.Households 
                     , V2.Domain.Orders 
                     , V2.Domain.Payments 
                     , V2.Domain.Prices 
                     , V2.Domain.Types 
                     , V2.Domain.Utils                     
                     , V2.ReconcileSumaOrderFile
                     , V2.Repository
                     , V2.Repository.SQL
                     , V2.Server
                     , V2.SumaCatalogue
  other-modules:     
  ghc-options:         -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-type-defaults
  build-depends:       aeson
                     , aeson-pretty
                     , ansi-terminal
                     , base
                     , bytestring
                     , case-insensitive
                     , cassava
                     , containers
                     , directory
                     , extra
                     , hashable
                     , http-conduit
                     , http-media
                     , http-types
                     , lens
                     , postgresql-simple
                     , process
                     , safe
                     , servant-server
                     , servant-multipart
                     , tagsoup
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , wai-extra
                     , wai-middleware-static
  default-language:    Haskell2010

executable usma
  hs-source-dirs:      server/app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-type-defaults
  build-depends:       usma
                     , aeson                     
                     , base
                     , bytestring
                     , http-types
                     , uuid
                     , text
                     , wai
                     , warp
                     , wai-extra
  default-language:    Haskell2010

test-suite usma-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
  main-is:             Spec.hs
  other-modules:       DomainSpec
                     , TestHelpers
                     , GenerateTestsSpec
                     , ApiRegressionSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-type-defaults
  build-depends:       usma
                     , base
                     , base-compat-batteries
                     , bytestring
                     , containers
                     , directory
                     , hspec
                     , hspec-wai
                     , time
                     , wai-extra
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stusherwin/usma
